# Gamera-Database

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  client.cpp  driver.cpp  server.cpp  sql.cpp
client/: client.cpp
sql/schema/: big_bang_theory.sql
sql/schemas/: big_bang_theory.sql  futurama.sql
sql/simple/: 01.sql  02.sql  03.sql  04.sql  05.sql
src/: BufferManager.hpp  ExternalSort.cpp  ExternalSort.hpp  FileNameProvider.hpp  InputRun.cpp  InputRun.hpp  LocalMakefile  OutputRun.hpp  Page.hpp  Run.hpp  RunHeap.hpp
src/btree/: Algorithms.hpp  BTInnerNode.hpp  BTLeafNode.hpp  BTNode.hpp  BTree.hpp  BTreeBase.hpp  CharIterator.hpp  IndexKey.cpp  IndexKey.hpp  IndexKeyComparator.cpp  IndexKeyComparator.hpp  IndexKeySchema.cpp  IndexKeySchema.hpp
src/buffer_manager/: BufferFrame.cpp  BufferFrame.hpp  BufferManager.cpp  BufferManager.hpp  Config.hpp  LocalMakefile  SPSegment.hpp  Segment.hpp  SegmentInventory.hpp  SegmentManager.hpp  SegmentType.hpp  SwapOutRandom.hpp  SwapOutSecondChance.hpp  SwapOutTwoQueue.hpp
src/common/: AttributeType.hpp  Config.hpp  PageId.hpp  RecordId.hpp  SegmentId.hpp  TupleId.hpp
src/core/: Database.cpp  Database.hpp  DatabaseConfig.hpp  Transaction.hpp  TransactionCallbackHandler.cpp  TransactionCallbackHandler.hpp
src/ext_hash_table/: Bucket.hpp  HashTable.hpp
src/external_sort/: BufferManager.hpp  Chunk.hpp  ExternalSort.cpp  ExternalSort.hpp  ExternalSortInterface.hpp  FileNameProvider.hpp  InputRun.cpp  InputRun.hpp  LocalMakefile  MemoryManager.hpp  MergeSort.hpp  OutputRun.cpp  OutputRun.hpp  Page.hpp  RunHeap.hpp  SortIterator.hpp  TempFile.hpp
src/extsort/: MergeSort.hpp  SortIterator.hpp  mergesort_internal.hpp
src/harriet/: Environment.cpp  Environment.hpp  Expression.cpp  Expression.hpp  Function.cpp  Function.hpp  GenericAllocator.hpp  GenericAllocatorPolicies.hpp  LICENSE.txt  ScriptLanguage.cpp  ScriptLanguage.hpp  Utility.hpp  Value.cpp  Value.hpp  VariableType.cpp  VariableType.hpp  vector3.hpp
src/indexes/: HashMap.hpp  HashMapBucketPage.hpp  HashMapDirectoryPage.hpp  HashMapMetaPage.hpp  HashMapSegment.cpp  HashMapSegment.hpp
src/lock_manager/: LockManager.cpp  LockManager.hpp
src/operator/: CrossProductOperator.cpp  CrossProductOperator.hpp  InsertOperator.cpp  InsertOperator.hpp  LocalMakefile  Operator.cpp  Operator.hpp  OperatorState.hpp  PrintOperator.cpp  PrintOperator.hpp  ProjectionOperator.cpp  ProjectionOperator.hpp  RecordScanOperator.cpp  RecordScanOperator.hpp  RootOperator.cpp  RootOperator.hpp  SelectionOperator.cpp  SelectionOperator.hpp  SingleRecordOperator.cpp  SingleRecordOperator.hpp  TableScanOperator.cpp  TableScanOperator.hpp
src/operator_cons/: COperator.hpp  FullScanOp.cpp  FullScanOp.hpp  ScanOp.hpp
src/query/: QueryFacade.cpp  QueryFacade.hpp
src/query_optimizer/: AccessTree.cpp  AccessTree.hpp  ChainOptimizer.cpp  ChainOptimizer.hpp  DummyOptimizer.cpp  DummyOptimizer.hpp  Optimizer.cpp  Optimizer.hpp  Predicate.hpp  PredicateGenerator.cpp  PredicateGenerator.hpp  TableAccessInfo.hpp  TableConnections.hpp
src/query_parser/: CodeGenerationVisitor.cpp  CodeGenerationVisitor.hpp  Common.hpp  ExecutionVisitor.cpp  ExecutionVisitor.hpp  Parser.cpp  Parser.hpp  Parser.leg  PlanGenerationVisitor.cpp  PlanGenerationVisitor.hpp  PrintVisitor.cpp  PrintVisitor.hpp  Script.hpp  Statement.cpp  Statement.hpp  Visitor.cpp  Visitor.hpp
src/query_util/: ColumnAccessInfo.hpp  ColumnResolver.cpp  ColumnResolver.hpp  Predicate.cpp  Predicate.hpp  PredicateGenerator.cpp  PredicateGenerator.hpp  TableAccessInfo.hpp
src/schema/: Common.hpp  LocalMakefile  MetadataManager.cpp  MetadataManager.hpp  RelationSchema.cpp  RelationSchema.hpp  Schema.hpp  SchemaManager.cpp  SchemaManager.hpp  Signature.cpp  Signature.hpp
src/segment_manager/: BTreeMetadata.hpp  BTreeSegment.cpp  BTreeSegment.hpp  CompactExtentStore.cpp  CompactExtentStore.hpp  Extent.cpp  Extent.hpp  ExtentStore.cpp  ExtentStore.hpp  FSISegment.cpp  FSISegment.hpp  LocalMakefile  MemoryIterator.hpp  PageIDIterator.cpp  PageIDIterator.hpp  PageIdIterator.cpp  PageIdIterator.hpp  Persister.cpp  Persister.hpp  Record.hpp  SISegment.cpp  SISegment.hpp  SPSegment.cpp  SPSegment.hpp  Segment.cpp  Segment.hpp  SegmentInventory.cpp  SegmentInventory.hpp  SegmentManager.cpp  SegmentManager.hpp  SegmentType.hpp  Slot.cpp  Slot.hpp  SlottedPage.cpp  SlottedPage.hpp
src/signature/: CrossProductSignature.cpp  ProjectionSignature.cpp  ProjectionSignature.hpp  SelectionSignature.cpp  SelectionSignature.hpp  Signature.cpp  Signature.hpp  SingleRecordSignature.cpp  SingleRecordSignature.hpp  TableScanSignature.cpp  TableScanSignature.hpp
src/sqlparser/: LocalMakefile  Parser.cpp  Parser.hpp  Schema.cpp  Schema.hpp  Types.hpp
src/util/: AttributeTypeConversion.cpp  AttributeTypeConversion.hpp  BinarySerializer.hpp  ByteEncoding.cpp  ByteEncoding.hpp  ConcurrentOffsetHash.cpp  ConcurrentOffsetHash.hpp  DynamicLinker.cpp  DynamicLinker.hpp  Extent.hpp  ExtentStore.cpp  ExtentStore.hpp  Graph.hpp  LocalMakefile  LoserTree.cpp  LoserTree.hpp  Math.hpp  Random.cpp  Random.hpp  ReadWriteLock.cpp  ReadWriteLock.hpp  ReadWriteSpinLock.cpp  ReadWriteSpinLock.hpp  SpinLock.cpp  SpinLock.hpp  StatisticsCollector.cpp  StatisticsCollector.hpp  StupidUserException.hpp  Utility.cpp  Utility.hpp
test/: BufferManagerTest.hpp  ExternalSortTest.cpp  FunkesBufferManagerTest.hpp  LocalMakefile  SegmentManagerTest.hpp  TestConfig.hpp  UtilityTest.cpp  bench1.cpp  perf.cpp  tester.cpp  tester.hpp  tester_all.cpp  tester_uebung1.cpp  tester_uebung2.cpp  tester_uebung3.cpp
test/btree/: BTreeTest.cpp  LocalMakefile
test/buffer_manager/: BufferManagerTest.cpp  BufferManagerTest.hpp  FunkesBufferManagerTest.hpp  LocalMakefile  tester.hpp
test/config/: ConfigTest.cpp  LocalMakefile
test/ext_hash_table/: HashTableTest.cpp  LocalMakefile
test/external_sort/: ExternalSortTest.cpp  ExternalSortTest.hpp  LocalMakefile  (+4 more)
web/: db_interface.rb  gamera.rb  json_util.rb  kill_db.rb  logger.rb  main.rb  sqlite.rb  test.db  test_driver.rb  validator.rb
(+129 files in other folders)
