cmake_minimum_required(VERSION 3.3)
project(Gamera_Database)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    src/btree/Algorithms.hpp
    src/btree/BTInnerNode.hpp
    src/btree/BTLeafNode.hpp
    src/btree/BTNode.hpp
    src/btree/BTree.hpp
    src/btree/BTreeBase.hpp
    src/btree/CharIterator.hpp
    src/btree/IndexKey.cpp
    src/btree/IndexKey.hpp
    src/btree/IndexKeyComparator.cpp
    src/btree/IndexKeyComparator.hpp
    src/btree/IndexKeySchema.cpp
    src/btree/IndexKeySchema.hpp
    src/buffer_manager/BufferFrame.cpp
    src/buffer_manager/BufferFrame.hpp
    src/buffer_manager/BufferManager.cpp
    src/buffer_manager/BufferManager.hpp
    src/buffer_manager/SwapOutRandom.hpp
    src/buffer_manager/SwapOutSecondChance.hpp
    src/buffer_manager/SwapOutTwoQueue.hpp
    src/common/AttributeType.hpp
    src/common/Config.hpp
    src/common/PageId.hpp
    src/common/RecordId.hpp
    src/common/SegmentId.hpp
    src/common/TupleId.hpp
    src/core/Database.cpp
    src/core/Database.hpp
    src/core/DatabaseConfig.hpp
    src/core/Transaction.hpp
    src/external_sort/Chunk.hpp
    src/external_sort/ExternalSort.cpp
    src/external_sort/ExternalSort.hpp
    src/external_sort/MergeSort.hpp
    src/external_sort/SortIterator.hpp
    src/external_sort/TempFile.hpp
    src/harriet/Environment.cpp
    src/harriet/Environment.hpp
    src/harriet/Expression.cpp
    src/harriet/Expression.hpp
    src/harriet/Function.cpp
    src/harriet/Function.hpp
    src/harriet/GenericAllocator.hpp
    src/harriet/GenericAllocatorPolicies.hpp
    src/harriet/ScriptLanguage.cpp
    src/harriet/ScriptLanguage.hpp
    src/harriet/Utility.hpp
    src/harriet/Value.cpp
    src/harriet/Value.hpp
    src/harriet/VariableType.cpp
    src/harriet/VariableType.hpp
    src/operator_cons/COperator.hpp
    src/operator_cons/FullScanOp.cpp
    src/operator_cons/FullScanOp.hpp
    src/operator_cons/ScanOp.hpp
    src/query/analyser/DependencyAnalyser.cpp
    src/query/analyser/DependencyAnalyser.hpp
    src/query/analyser/ExpressionOptimizer.cpp
    src/query/analyser/ExpressionOptimizer.hpp
    src/query/analyser/PredicateGenerator.cpp
    src/query/analyser/PredicateGenerator.hpp
    src/query/analyser/ProjectionGenerator.cpp
    src/query/analyser/ProjectionGenerator.hpp
    src/query/operator/CrossProductOperator.cpp
    src/query/operator/CrossProductOperator.hpp
    src/query/operator/InsertOperator.cpp
    src/query/operator/InsertOperator.hpp
    src/query/operator/Operator.cpp
    src/query/operator/Operator.hpp
    src/query/operator/OperatorState.hpp
    src/query/operator/PrintOperator.cpp
    src/query/operator/PrintOperator.hpp
    src/query/operator/ProjectionOperator.cpp
    src/query/operator/ProjectionOperator.hpp
    src/query/operator/RootOperator.cpp
    src/query/operator/RootOperator.hpp
    src/query/operator/SelectionOperator.cpp
    src/query/operator/SelectionOperator.hpp
    src/query/operator/SingleRecordOperator.cpp
    src/query/operator/SingleRecordOperator.hpp
    src/query/operator/SortOperator.cpp
    src/query/operator/SortOperator.hpp
    src/query/operator/TableScanOperator.cpp
    src/query/operator/TableScanOperator.hpp
    src/query/operator/ZeroRecordOperator.cpp
    src/query/operator/ZeroRecordOperator.hpp
    src/query/optimizer/AccessTree.cpp
    src/query/optimizer/AccessTree.hpp
    src/query/optimizer/ChainOptimizer.cpp
    src/query/optimizer/ChainOptimizer.hpp
    src/query/optimizer/DummyOptimizer.cpp
    src/query/optimizer/DummyOptimizer.hpp
    src/query/optimizer/Optimizer.cpp
    src/query/optimizer/Optimizer.hpp
    src/query/parser/Common.hpp
    src/query/parser/ExecutionVisitor.cpp
    src/query/parser/ExecutionVisitor.hpp
    src/query/parser/Parser.cpp
    src/query/parser/Parser.hpp
    src/query/parser/PlanGenerationVisitor.cpp
    src/query/parser/PlanGenerationVisitor.hpp
    src/query/parser/PrintVisitor.cpp
    src/query/parser/PrintVisitor.hpp
    src/query/parser/Statement.cpp
    src/query/parser/Statement.hpp
    src/query/parser/Visitor.cpp
    src/query/parser/Visitor.hpp
    src/query/result/QueryResult.cpp
    src/query/result/QueryResult.hpp
    src/query/result/QueryResultCollection.cpp
    src/query/result/QueryResultCollection.hpp
    src/query/result/QueryType.hpp
    src/query/signature/SelectionSignature.cpp
    src/query/signature/SelectionSignature.hpp
    src/query/signature/TableScanSignature.cpp
    src/query/signature/TableScanSignature.hpp
    src/query/util/ColumnAccessInfo.cpp
    src/query/util/ColumnAccessInfo.hpp
    src/query/util/GlobalRegister.cpp
    src/query/util/GlobalRegister.hpp
    src/query/util/Predicate.cpp
    src/query/util/Predicate.hpp
    src/query/util/Projection.cpp
    src/query/util/Projection.hpp
    src/query/util/TableAccessInfo.hpp
    src/query/QueryFacade.cpp
    src/query/QueryFacade.hpp
    src/schema/RelationSchema.cpp
    src/schema/RelationSchema.hpp
    src/schema/Schema.hpp
    src/schema/SchemaManager.cpp
    src/schema/SchemaManager.hpp
    src/segment_manager/BTreeMetadata.hpp
    src/segment_manager/BTreeSegment.cpp
    src/segment_manager/BTreeSegment.hpp
    src/segment_manager/CompactExtentStore.cpp
    src/segment_manager/CompactExtentStore.hpp
    src/segment_manager/Extent.cpp
    src/segment_manager/Extent.hpp
    src/segment_manager/ExtentStore.cpp
    src/segment_manager/ExtentStore.hpp
    src/segment_manager/FSISegment.cpp
    src/segment_manager/FSISegment.hpp
    src/segment_manager/MemoryIterator.hpp
    src/segment_manager/PageIdIterator.cpp
    src/segment_manager/PageIdIterator.hpp
    src/segment_manager/Persister.cpp
    src/segment_manager/Persister.hpp
    src/segment_manager/Record.hpp
    src/segment_manager/Segment.cpp
    src/segment_manager/Segment.hpp
    src/segment_manager/SegmentInventory.cpp
    src/segment_manager/SegmentInventory.hpp
    src/segment_manager/SegmentManager.cpp
    src/segment_manager/SegmentManager.hpp
    src/segment_manager/SegmentType.hpp
    src/segment_manager/Slot.cpp
    src/segment_manager/Slot.hpp
    src/segment_manager/SlottedPage.cpp
    src/segment_manager/SlottedPage.hpp
    src/segment_manager/SPSegment.cpp
    src/segment_manager/SPSegment.hpp
    src/server/Controller.hpp
    src/util/AttributeTypeConversion.cpp
    src/util/AttributeTypeConversion.hpp
    src/util/BinarySerializer.hpp
    src/util/ByteEncoding.cpp
    src/util/ByteEncoding.hpp
    src/util/ConcurrentOffsetHash.cpp
    src/util/ConcurrentOffsetHash.hpp
    src/util/Graph.hpp
    src/util/LoserTree.cpp
    src/util/LoserTree.hpp
    src/util/Math.hpp
    src/util/Random.cpp
    src/util/Random.hpp
    src/util/ReadWriteLock.cpp
    src/util/ReadWriteLock.hpp
    src/util/ReadWriteSpinLock.cpp
    src/util/ReadWriteSpinLock.hpp
    src/util/SpinLock.cpp
    src/util/SpinLock.hpp
    src/util/StatisticsCollector.cpp
    src/util/StatisticsCollector.hpp
    src/util/StupidUserException.hpp
    src/util/Utility.cpp
    src/util/Utility.hpp
    test/btree/BTreeTest.cpp
    test/buffer_manager/BufferManagerTest.cpp
    test/buffer_manager/FunkesBufferManagerTest.hpp
    test/config/ConfigTest.cpp
    test/external_sort/MergeSortTest.cpp
    test/harriet/ValueTest.cpp
    test/index/IndexKeyTest.cpp
    test/lock_manager/LockManagerTest.cpp
    test/query/BasicQueryTest.cpp
    test/query/QueryTest.cpp
    test/query/QueryTestUtil.hpp
    test/schema/RelationSchemaTest.cpp
    test/segment_manager/CompactExtentStoreTest.cpp
    test/segment_manager/FunkeSlottedTest.hpp
    test/segment_manager/SegmentManagerTest.cpp
    test/segment_manager/SlottedPageTest.cpp
    test/segment_manager/SPSegmentTest.cpp
    test/util/ByteEncodingTest.cpp
    test/util/ConcurrentOffsetHashTest.cpp
    test/util/GraphTest.cpp
    test/util/LoserTreeTest.cpp
    test/util/ReadWriteLockTest.cpp
    test/util/UtilityTest.cpp
    test/TestConfig.hpp
    test/tester.cpp
    client.cpp
    driver.cpp
    server.cpp)

include_directories(. ./src /usr/local/include/)

add_executable(Gamera_Database ${SOURCE_FILES})